# ruva

./: Cargo.toml
ruva-macro/src/: construct.rs
src/: lib.rs
tests/: construct_tests.rs
tests/construct/: basic_struct.rs  struct_with_except.rs  struct_with_generics.rs  unnamed_fields_fail.rs  unnamed_fields_fail.stderr  unsupported_enum.rs  unsupported_enum.stderr
