[package]
name = "ruva"
version = "0.20.0"
edition = "2021"
license = "MIT"
description = "Rust Library For Event Driven Message Handling"
repository = "https://github.com/BeringLab/ruva"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ruva-core = { version = "0.20.0", path = "./ruva-core" }
ruva-macro = { version = "0.19.4", path = "./ruva-macro" }
static_assertions = "1.1.0"
regex = "1.11.1"
utoipa = { version = "5.2.0", optional = true }

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
trybuild = "1.0.104"

[features]
backtrace = ["ruva-core/backtrace"]
tracing = ["ruva-core/tracing"]
sqlx-postgres = ["ruva-core/sqlx-postgres"]
utoipa = ["dep:utoipa", "ruva-core/utoipa"]
